[tool.poetry]
name = "dreamdraw-api"
version = "0.1.0"
description = ""
authors = ["hopeJRD <jordanh0pe@pm.me>"]
readme = "README.md"
packages = [{include = "dreamdraw_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
